--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,1 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
-    width: 100%;
-    padding: 2%;
-    color: rgb(255, 255, 255);
-    background-image: url("/storage/img/textura.jpg");
-}
-header{
-    display: flex;
-    justify-content: center;
-    padding: 3%;
-    background: black;
-    border-radius: 10px;
-}
-article{
-    display: grid;
-    padding: 5%;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    justify-content: center;
-    background: rgb(73, 1, 1);
-}
-div{
-    padding: 2%;
-    width: 100%;
-    height: 12vh;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-button{
-    padding: 1%;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-}
-.itachi{
-    position: fixed;
-    justify-content: center;
-    width: 50%;
-    height: 50vh;
-    border: 1px solid black;
-    background-image: url(/storage/img/textura2.jpg);
-    padding: 10px;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    display: none;
-    font-size: 1.9rem;
-}
-img {
-    width: 50%;
-    height: 40vh;
-}
-.x{
-    position: absolute;
-    top: 0;
-    right: 0;
-}
+body{background-color:#0ca3d2;font-family:'Droid Serif',serif}header{background-color:#34a853;height:50%;margin:0 auto;margin-top:20px;padding:5px;width:50%}header h1{margin-left:20%}h2{background-color:#f3f3f3;border-bottom:1px solid #cfcfcf;border-radius:3px 3px 0 0;color:#555;font-size:15px;font-weight:bold;line-height:40px;margin:-20px -20px 21px;text-align:center;text-shadow:0 1px #fff;}h2 label{color:#777;cursor:pointer;font-size:12px}h2 input{bottom:1px;margin-right:4px;position:relative;vertical-align:middle}a{color:#cce7fa;text-decoration:none;}a:hover{text-decoration:underline}input{font-family:'Lucida Grande',Tahoma,Verdana,sans-serif;font-size:14px}input[type=text],input[type=password]{background-color:#fff;border:1px solid;border-color:#c4c4c4 #d1d1d1 rgba(212,212,212,0.831);border-radius:4px;color:#404040;height:34px;margin:5px;padding:0 10px;width:200px;}input[type=text]:focus,input[type=password]:focus{border-color:#7dc9e2;outline-color:#616161;outline-offset:0}input[type=submit]{background-color:#cde5ef;border:1px solid;border-color:#b4ccce #b3c0c8 #9eb9c2;border-radius:16px;color:#527881;font-size:12px;font-weight:bold;heigth:29px;outline:16px;padding:0 18px;text-shadow:0 1px #e3f1f1;}input[type=submit]:active{background-color:#cde5ef;border-color:#9eb9c2 #b3c0c8 #b4ccce}li{list-style:none}#alert{margin:0 auto;width:32%}.hidden{display:none}.login{background-color:#fff;border-radius:3px;margin:0 auto;margin-top:10px;padding:20px 20px 20px 20px;position:relative;width:350px}.login p{margin:20px 0 0;}.login p p:first-child{margin-top:0}.remember_me{float:left;line-height:31px}.submit{text-align:right}.login-help{color:#fff;font-size:11px;margin:20px 0;text-align:center;text-shadow:0 1px #2a85a1}#datos{margin:0 auto;margin-bottom:0}#datos h3{text-align:center}#data_address h4{margin:5px 5px 0 0}#data_address h4,#btnAddNew{display:inline-block;margin-bottom:8px;vertical-align:top}#btnAddNew,#btnDelete{margin:0 5px 0 0}#set-address{overflow-x:scroll;width:100%}#return_page a{color:#000}
